--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,18 +1,7 @@
-#spring.application.name=MovieAPI
-#server.port=8080
-#spring.datasource.url=jdbc:mysql://localhost:3306/movie_api?serverTimezone=Europe/Kiev
-#spring.datasource.username=root
-#spring.datasource.password=
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=update
-#spring.flyway.baseline-on-migrate=true
-#spring.main.allow-circular-references=true
-
 spring:
   datasource:
     username: root
-    password: 982210QwE
+    password:
     url: jdbc:mysql://localhost:3306/movie_api
   jpa:
     hibernate:
