--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     username: root
-    password:
+    password: 982210QwE
     url: jdbc:mysql://localhost:3306/movie_api
   jpa:
     hibernate:
