--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,7 +10,21 @@ spring:
       properties:
         hibernate:
           format_sql: true
-
+servlet:
+  multipart:
+    max-file-size: 10MB
+    max-request-size: 10MB
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: "ADMIN@gmail.com"
+    password: "password123"
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
 project:
   poster: posters/
 
